additional changes, images etc

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            初夢 hatsuyume
-description:      
-disqus_shortname: 
+description:      wandering
+disqus_shortname: hatsuyume
 reading_time:     false
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
