update some images

--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ url:
 # Owner/author information
 owner:
   name:           初夢 hatsuyume
-  avatar:         avatar.jpg
-  bio:            "some writing is here"
+  avatar:         tree-avatar.JPG
+  bio:            "sometimes i write things"
   email:          info@hatsuyume.xyz
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
